--- a/MainProject/src/client/MainPage.form
+++ b/MainProject/src/client/MainPage.form
@@ -175,6 +175,9 @@
               <Properties>
                 <Property name="text" type="java.lang.String" value="Log Out"/>
               </Properties>
+              <Events>
+                <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="logOutButtonActionPerformed"/>
+              </Events>
             </Component>
             <Component class="javax.swing.JLabel" name="peopleFollowingLabel">
               <Properties>
