remove text from Password fields on focus

--- a/MainProject/src/client/LogInPage.form
+++ b/MainProject/src/client/LogInPage.form
@@ -103,6 +103,9 @@
       <Properties>
         <Property name="text" type="java.lang.String" value="jPasswordField1"/>
       </Properties>
+      <Events>
+        <EventHandler event="focusGained" listener="java.awt.event.FocusListener" parameters="java.awt.event.FocusEvent" handler="userPasswordFieldFocusGained"/>
+      </Events>
     </Component>
   </SubComponents>
 </Form>
