--- a/MainProject/src/client/MainPage.form
+++ b/MainProject/src/client/MainPage.form
@@ -323,6 +323,9 @@
               <Properties>
                 <Property name="text" type="java.lang.String" value="Refresh Feed (go to most recent)"/>
               </Properties>
+              <Events>
+                <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="refreshFeedButtonActionPerformed"/>
+              </Events>
             </Component>
             <Component class="javax.swing.JLabel" name="feedTextLabel">
               <Properties>
