--- a/MainProject/src/client/StartupWindow.form
+++ b/MainProject/src/client/StartupWindow.form
@@ -79,11 +79,14 @@
           <Font name="Segoe UI" size="18" style="0"/>
         </Property>
         <Property name="horizontalAlignment" type="int" value="0"/>
-        <Property name="text" type="java.lang.String" value="Welcome to *ProjectName*"/>
+        <Property name="text" type="java.lang.String" value="Welcome to &quot;The Better Twitter&quot;"/>
       </Properties>
     </Component>
     <Component class="javax.swing.JButton" name="aboutButton">
       <Properties>
+        <Property name="background" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
+          <Color blue="cc" green="ff" red="33" type="rgb"/>
+        </Property>
         <Property name="text" type="java.lang.String" value="About"/>
       </Properties>
       <Events>
@@ -92,6 +95,9 @@
     </Component>
     <Component class="javax.swing.JButton" name="logInButton">
       <Properties>
+        <Property name="background" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
+          <Color blue="cc" green="ff" red="33" type="rgb"/>
+        </Property>
         <Property name="text" type="java.lang.String" value="Log In"/>
       </Properties>
       <Events>
@@ -100,6 +106,9 @@
     </Component>
     <Component class="javax.swing.JButton" name="registerButton">
       <Properties>
+        <Property name="background" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
+          <Color blue="cc" green="ff" red="33" type="rgb"/>
+        </Property>
         <Property name="text" type="java.lang.String" value="Register"/>
       </Properties>
       <Events>
